--- a/personal website/sidebar.css
+++ b/personal website/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar
 {
-    position:fixed;
+    position: absolute;
     top:50px;
     right:-5px;
     width:200px;
@@ -32,6 +32,6 @@
 {
     bottom:0px;
     transform: translateY(0%);
-    height:51.8%;
+    height:23.4%;
 
 }
